logs/dag_id=test_dag/run_id=manual__2025-03-26T11:18:13.474544+00:00/task_id=transfer_data/attempt=1.log
[2025-03-26T12:18:16.566+0100] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: test_dag.transfer_data manual__2025-03-26T11:18:13.474544+00:00 [queued]>
[2025-03-26T12:18:16.571+0100] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: test_dag.transfer_data manual__2025-03-26T11:18:13.474544+00:00 [queued]>
[2025-03-26T12:18:16.571+0100] {taskinstance.py:2170} INFO - Starting attempt 1 of 1
[2025-03-26T12:18:16.581+0100] {taskinstance.py:2191} INFO - Executing <Task(PythonOperator): transfer_data> on 2025-03-26 11:18:13.474544+00:00
[2025-03-26T12:18:16.585+0100] {standard_task_runner.py:60} INFO - Started process 37181 to run task
[2025-03-26T12:18:16.587+0100] {standard_task_runner.py:87} INFO - Running: ['airflow', 'tasks', 'run', 'test_dag', 'transfer_data', 'manual__2025-03-26T11:18:13.474544+00:00', '--job-id', '54', '--raw', '--subdir', 'DAGS_FOLDER/test_dag.py', '--cfg-path', '/tmp/tmplzyhoiv2']
[2025-03-26T12:18:16.588+0100] {standard_task_runner.py:88} INFO - Job 54: Subtask transfer_data
[2025-03-26T12:18:16.634+0100] {task_command.py:423} INFO - Running <TaskInstance: test_dag.transfer_data manual__2025-03-26T11:18:13.474544+00:00 [running]> on host LAPTOP-A4DHQTS9.
[2025-03-26T12:18:16.702+0100] {taskinstance.py:2480} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='airflow' AIRFLOW_CTX_DAG_ID='test_dag' AIRFLOW_CTX_TASK_ID='transfer_data' AIRFLOW_CTX_EXECUTION_DATE='2025-03-26T11:18:13.474544+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2025-03-26T11:18:13.474544+00:00'
[2025-03-26T12:18:16.713+0100] {base.py:83} INFO - Using connection ID 'source_db' for task execution.
[2025-03-26T12:18:16.718+0100] {sql.py:450} INFO - Running statement: SELECT * FROM prog3;, parameters: None
[2025-03-26T12:18:16.721+0100] {sql.py:459} INFO - Rows affected: 30
[2025-03-26T12:18:16.731+0100] {base.py:83} INFO - Using connection ID 'destination_db' for task execution.
[2025-03-26T12:18:16.738+0100] {taskinstance.py:2698} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/philip/de_engineering/airflow_projects/airflow1/venv/lib/python3.10/site-packages/airflow/models/taskinstance.py", line 433, in _execute_task
    result = execute_callable(context=context, **execute_callable_kwargs)
  File "/home/philip/de_engineering/airflow_projects/airflow1/venv/lib/python3.10/site-packages/airflow/operators/python.py", line 199, in execute
    return_value = self.execute_callable()
  File "/home/philip/de_engineering/airflow_projects/airflow1/venv/lib/python3.10/site-packages/airflow/operators/python.py", line 216, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/home/philip/airflow/dags/test_dag.py", line 68, in transfer_data
    dest_pg_hook.insert_rows(f"staging.{destination_table}", source_data)
  File "/home/philip/de_engineering/airflow_projects/airflow1/venv/lib/python3.10/site-packages/airflow/providers/common/sql/hooks/sql.py", line 541, in insert_rows
    cur.execute(sql, values)
psycopg2.errors.SyntaxError: INSERT has more expressions than target columns
LINE 1: INSERT INTO staging.stg_prog3  VALUES ('2024-11-29T10:12:45....
                                               ^

[2025-03-26T12:18:16.750+0100] {taskinstance.py:1138} INFO - Marking task as FAILED. dag_id=test_dag, task_id=transfer_data, execution_date=20250326T111813, start_date=20250326T111816, end_date=20250326T111816
[2025-03-26T12:18:16.757+0100] {standard_task_runner.py:107} ERROR - Failed to execute job 54 for task transfer_data (INSERT has more expressions than target columns
LINE 1: INSERT INTO staging.stg_prog3  VALUES ('2024-11-29T10:12:45....
                                               ^
; 37181)
[2025-03-26T12:18:16.762+0100] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2025-03-26T12:18:16.777+0100] {taskinstance.py:3280} INFO - 0 downstream tasks scheduled from follow-on schedule check
